--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
       height="270"
       crossorigin="anonymous"
     >
-      <source src="ABOVE THE TULIP FIELDS.mp4" type="video/webm" />
+      <!--
       <source
         src="https://jplayer.org/video/m4v/Big_Buck_Bunny_Trailer.m4v"
-        sec="ABOVE THE TULIP FIELDS.mp4"
         type="video/mp4"
       />
+      -->
+      <source src="ABOVE THE TULIP FIELDS.mp4" type="video/mp4" />
     </video>
 
     <div id="filtered_image">
