--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+  />
+
   <style>
     #filtered_image {
       position: relative;
