--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         type="video/mp4"
       />
       -->
-      <source src="ABOVE THE TULIP FIELDS.mp4" type="video/mp4" />
+      <source src="short-flowers.mov" type="video/mp4" />
     </video>
 
     <div id="filtered_image">
